<resources>
    <string name="app_name">e网购优品</string>
    <string name="http_url">http://www.ewgvip.com</string>
    <string name="quit">退出</string>
    <string name="url">www.ewgvip.com</string>
    <string name="welcome">欢迎界面</string>
    <string name="ActivityMainTitle">商城</string>
    <string name="index">首页</string>
    <string name="sort">分类</string>
    <string name="cart">购物车</string>
    <string name="brand">品牌</string>
    <string name="logo">logo</string>
    <string name="searchshop">搜索商品</string>
    <string name="erwei">扫描二维码</string>
    <string name="usercenter">个人中心</string>
    <string name="customer_service">客服</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="more">更多</string>
    <string name="usercenterWelcome">欢迎来到e网购</string>
    <string name="usercenterLogReg">登录/注册</string>
    <string name="orderSearch">订单管理</string>
    <string name="coupons">优惠券</string>
    <string name="reduce_amount">满减金额</string>
    <string name="reduce_amount2">满减金额:</string>
    <string name="couponss">优惠券:</string>
    <string name="myConcern">我的收藏</string>
    <string name="sNetWork">未打开网络连接</string>
    <string name="noData">暂无分类</string>
    <string name="myMassage">我的消息</string>
    <string name="myReservation">我的预约</string>
    <string name="browsingHistory">浏览记录</string>
    <string name="addressManage">地址管理</string>
    <string name="evaluation">商品评价</string>
    <string name="addressManage_tip">管理收货地址</string>
    <string name="accountsManagement">账户管理</string>
    <string name="serviceManager">服务管家</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="userName">用户名:</string>
    <string name="password">密　码:</string>
    <string name="forgetPassword">找回密码</string>
    <string name="quickRegist">快速注册</string>
    <string name="registagree">《注册协议》</string>
    <string name="agree">同意，</string>
    <string name="search">搜索</string>
    <string name="typeSearchContext">输入搜索内容</string>
    <string name="typeSearchStorelike">搜索店铺内宝贝</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="feedback">意见反馈</string>
    <string name="cleanCache">清除缓存</string>
    <string name="checkUpdate">检查更新</string>
    <string name="about">关于</string>
    <string name="copyright">软件许可使用协议</string>
    <string name="exit">退出登录</string>
    <string name="abouteShop">Copyright 2015&#8211;2016 © \n广州新硬件科技有限公司</string>
    <string name="passwordConfirm">确认密码:</string>
    <string name="avatar">用户头像</string>
    <string name="balance_n">预存款\n</string>
    <string name="coupon_n">优惠券数量\n</string>
    <string name="integral_n">用户积分\n</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="newAddress">新建地址</string>
    <string name="receiver">收货人:</string>
    <string name="mobilePhone">手机:</string>
    <string name="province">省份:</string>
    <string name="address">地址:</string>
    <string name="zipCode">邮编:</string>
    <string name="yes">确定</string>
    <string name="next">下一步</string>
    <string name="receiverInfo">收货人信息</string>
    <string name="paymentAndDeliveryMethods">支付和配送方式</string>
    <string name="invoiceInfo">发票信息</string>
    <string name="viewGoodsList">查看商品清单</string>
    <string name="billingInfo">结算信息</string>
    <string name="amountPayable">应付金额:</string>
    <string name="amountAllPayable">应付总额</string>
    <string name="submitOrders">提交订单</string>
    <string name="submitandpay">提交订单并支付</string>
    <string name="orderRemark">订单备注:</string>
    <string name="amountOfGoods">商品金额</string>
    <string name="amountOfGoods2">商品金额:￥</string>
    <string name="returnMoney">返现</string>
    <string name="goodsDetails">商品详情</string>
    <string name="share">分享</string>
    <string name="current_Price">商城价格:</string>
    <string name="referencePrice">参考价格:</string>
    <string name="goodsInfo">商品详情</string>
    <string name="promotionalInfo">促销</string>
    <string name="distributionTo">送至</string>
    <string name="specification">规格:</string>
    <string name="haschosen">已选</string>
    <string name="purchaseConsulting">购买咨询</string>
    <string name="evaluate_more">更多评价</string>
    <string name="service">服务</string>
    <string name="loading">加载中</string>
    <string name="addToCar">加入购物车</string>
    <string name="favourite">收藏</string>
    <string name="favourited">已收藏</string>
    <string name="buyNow">立即购买</string>
    <string name="youhui1">满减</string>
    <string name="youhui2">多买优惠</string>
    <string name="spotGoods">现货</string>
    <string name="noGoods">无货</string>
    <string name="arrow">箭头</string>
    <string name="img">图片</string>
    <string name="screen">筛选</string>
    <string name="price">价格</string>
    <string name="sales_volume">销量</string>
    <string name="popularity">人气</string>
    <string name="addtime">上架时间</string>
    <string name="newgoods">新品</string>
    <string name="nodata">抱歉，没有符合条件的相关数据！</string>
    <string name="noMessage">没有消息</string>
    <string name="noConcern">暂无收藏，快去添加吧</string>
    <string name="noOrder">没有订单记录</string>
    <string name="exittag">再按一次返回键退出ISkyShop客户端</string>
    <string name="mymassage">我的消息</string>
    <string name="physicalOrder">实物订单</string>
    <string name="virtualOrder">虚拟订单</string>
    <string name="deleteSearchHistory">清空搜索历史</string>
    <string name="nohistory">没有搜索历史记录</string>
    <string name="orderNumber">订  单  号:</string>
    <string name="orderAmount">订单金额:</string>
    <string name="orderTime">下单时间:</string>
    <string name="orderStatus">订单状态:</string>
    <string name="orderDetail">订单详情</string>
    <string name="concernGoods">关注商品</string>
    <string name="concernShop">关注店铺</string>
    <string name="fillOrder">填写订单</string>
    <string name="paymentMethods">支付方式:</string>
    <string name="deliveryMethods">配送方式:</string>
    <string name="logisticsInfo">物流信息:</string>
    <string name="logistics">查看物流</string>
    <string name="limit45">限45个字以内</string>
    <string name="cancleOrder">取消订单</string>
    <string name="orderTracking">订单跟踪</string>
    <string name="totalMerchandise">商品总额:</string>
    <string name="returnMoney_tag">返现:</string>
    <string name="freightTag">运费</string>
    <string name="freight_tag">运费:</string>
    <string name="freight">物流运费</string>
    <string name="goods_no">商品编号:</string>
    <string name="praisePercent">好评度:</string>
    <string name="noconsult">暂无评价就等你了</string>
    <string name="addConsult">发表咨询</string>
    <string name="submit">提交</string>
    <string name="consultType">咨询类型</string>
    <string name="consultContent">咨询内容</string>
    <string name="promotionInfo">当前商品为促销商品，用户登录后方可享受促销价格！</string>
    <string name="youMayLike">也许你还喜欢:</string>
    <string name="combine_count">购买数量:</string>
    <string name="count">数量:</string>
    <string name="number">数量</string>
    <string name="pickCount">修改购买数量</string>
    <string name="cancle">取消</string>
    <string name="gotoindex">去首页</string>
    <string name="cartempty">购物车还是空的，去首页看看吧~</string>
    <string name="noReciever">还没有收货人信息，快去添加吧</string>
    <string name="invoiceType">发票类型:</string>
    <string name="invoiceTitle">发票抬头:</string>
    <string name="regularInvoice">普通发票</string>
    <string name="valueAddedTaxInvoice">专用发票</string>
    <string name="individual">个人</string>
    <string name="passwordmodify">密码修改</string>
    <string name="paypasswordmodify">支付设置</string>
    <string name="pay_payafter">货到付款</string>
    <string name="pay_balance">预存款支付</string>
    <string name="pay_balance_recommand">推荐商城预存款用户使用</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_payafter_tag">确定使用货到付款吗？</string>
    <string name="pay_balance_ps">请输入预存款留言信息 (预存款留言有利于商家迅速辨别买家，您也可以稍后在用户中心“订单查询”中进行支付):</string>
    <string name="pay_payafter_ps">送货说明</string>
    <string name="nocoupons">目前没有可使用的优惠券</string>
    <string name="payPassword">为了您的账号安全,请输入支付密码</string>
    <string name="payNow">立即付款</string>
    <string name="paySuccess">系统提示</string>
    <string name="goodsList">商品清单</string>
    <string name="postComment">发表评论</string>
    <string name="descriptionEvaluate">描述相符:</string>
    <string name="serviceEvaluate">服务态度:</string>
    <string name="shipEvaluate">发货速度:</string>
    <string name="commentString">评语:</string>
    <string name="evaluationRating">评价:</string>
    <string name="goodEvaluation">好评</string>
    <string name="goodEvaluationRate">好评度</string>
    <string name="midEvaluation">中评</string>
    <string name="badEvaluation">差评</string>
    <string name="oldpassword">原密码:</string>
    <string name="newpassword">新密码:</string>
    <string name="repeat">再次输入:</string>
    <string name="transID">物流单号:</string>
    <string name="transCompany">物流公司:</string>
    <string name="transTime">发货时间:</string>
    <string name="noTrans">暂无物流信息</string>
    <string name="manyTrans">您的订单由多个商家为您发货</string>
    <string name="transInfo">物流信息</string>
    <string name="transbug">快递公司数据异常</string>
    <string name="contactUs">联系我们</string>
    <string name="customerServicePhone">客服电话:</string>
    <string name="customerServiceQQ">客服QQ:</string>
    <string name="pay_password_setting">支付设置</string>
    <string name="login_password">登录密码:</string>
    <string name="pay_password">支付密码:</string>
    <string name="loginPassword">登录密码</string>
    <string name="paypassword">支付密码</string>
    <string name="pay_password_notice">重要提醒:设置支付密码能够有效保证您的账户预存款安全</string>
    <string name="now_pay_password_lebal">当前支付密码:</string>
    <string name="pleaseChoosepay">请选择支付方式</string>
    <string name="pleaseChoose">请选择配送方式</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="cart_tip">您可以在登陆后同步电脑与手机购物车中的商品</string>
    <string name="welcome_to">欢迎来到ISkyShop</string>
    <string name="no_evaluate">暂无评价</string>
    <string name="choose_gift">选择赠品</string>
    <string name="chosen_num">已选择0/1件</string>
    <string name="pull_up">上拉查看图文详情</string>
    <string name="pull_down">下拉收起图文详情</string>
    <string name="integral_mall">积分商城</string>
    <string name="integral_goods">积分商品</string>
    <string name="integral_recommend">推荐兑换商品</string>
    <string name="integral_condition">积分筛选</string>
    <string name="choose_range">选择区间</string>
    <string name="integral_require">消耗积分:</string>
    <string name="shop_price">市场价格:</string>
    <string name="ig_time_type">兑换时间:</string>
    <string name="ig_limit_type">兑换限制:</string>
    <string name="ig_transfee">邮费:</string>
    <string name="ig_user_Level">要求等级:</string>
    <string name="ig_count">兑换数量:</string>
    <string name="inventory">库存:</string>
    <string name="addToIntegralCar">加入积分购物车</string>
    <string name="integralBuyNow">立即兑换</string>
    <string name="freebuy">0元购</string>
    <string name="free_apply">免费试用</string>
    <string name="apply_num">人申请</string>
    <string name="free_default_count">发布数量:</string>
    <string name="free_current_count">剩余数量:</string>
    <string name="free_apply_count">申请人数:</string>
    <string name="free_time">截止时间:</string>
    <string name="fill_apply">填写申请</string>
    <string name="fill_apply_word">申请留言</string>
    <string name="fill_apply_tip">填写留言可提高审核通过率，请认真填写。</string>
    <string name="leave_message">填写留言</string>
    <string name="scan_orders">查看我的订单</string>
    <string name="qrlogin_tip">e网购电脑端登录确认</string>
    <string name="qrlogin_yes">确认登录电脑端</string>
    <string name="select_all">全选</string>
    <string name="evaluate_all">全部</string>
    <string name="evaluate_well">好评</string>
    <string name="evaluate_middle">中评</string>
    <string name="evaluate_bad">差评</string>
    <string name="address_detail">详细地址</string>
    <string name="phone_number">电话号码</string>
    <string name="konw_the_detail">我知道了</string>
    <string name="my_integral">我的积分</string>
    <string name="integral_unit">分</string>
    <string name="integral_detail">兑换记录</string>
    <string name="entry_integral">积分兑换商品</string>
</resources>