<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <include layout="@layout/layout_toolbar"></include>

    <ImageView
        android:id="@+id/code"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/erwei"
        android:src="@mipmap/code" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/code"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/logocolor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/abouteShop"
        android:textColor="@color/black" />

</RelativeLayout>