<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_integral_detail_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/integral_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="187dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_rounded_white">

            <TextView
                android:id="@+id/tv_my_integral_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/my_integral"
                android:textColor="@color/integral_title_detail"
                android:textSize="@dimen/text_twelve" />

            <TextView
                android:id="@+id/tv_my_integral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_my_integral_tag"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/my_integral"
                android:textColor="@color/order_evaluate_price_red"
                android:textSize="@dimen/text_forty" />

            <TextView
                android:id="@+id/tv_my_integral_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_my_integral"
                android:layout_below="@id/tv_my_integral_tag"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/tv_my_integral"
                android:text="@string/integral_unit"
                android:textColor="@color/order_evaluate_price_red"
                android:textSize="@dimen/text_thirteen" />

            <TextView
                android:id="@+id/tv_integral_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/integral_detail"
                android:textColor="@color/order_evaluate_price_red"
                android:textSize="@dimen/text_thirteen" />

            <Button
                android:id="@+id/b_integral_index"
                style="@style/button_white_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/rounded_red"
                android:text="@string/entry_integral"
                android:textColor="@color/white" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/gray_white">

        <TextView
            android:id="@+id/tv_integral_time_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/integral_detail"
            android:textColor="@color/integral_time_detail"
            android:textSize="@dimen/text_thirteen" />

    </RelativeLayout>

</LinearLayout>
